--- a/pro.html
+++ b/pro.html
@@ -324,7 +324,149 @@
                                 </td>
                                 <td width="4%" height="80" bgcolor="#006fcf"></td>
                             </tr>
-                            
+                            <tr>                        
+                                <td width="4%" height="70" bgcolor="#006fcf"></td>
+                                <td width="92%" bgcolor="#fff" style="text-align: center; vertical-align: middle; padding: 10px">
+                                    <img height="35px" src="img/facebook.svg" alt="">
+                                </td>
+                                <td width="4%" height="70" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>                        
+                                <td width="4%" height="1" bgcolor="#006fcf"></td>
+                                <td width="92%" height="1" bgcolor="#e5e4e5"></td>
+                                <td width="4%" height="1" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>
+                                <td width="4%" height="40" bgcolor="#006fcf"></td>
+                                <td width="92%" bgcolor="#fff"></td>
+                                <td width="4%" height="40" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>                        
+                                <td width="4%" height="70" bgcolor="#006fcf"></td>
+                                <td width="92%" bgcolor="#fff" style="text-align: center; vertical-align: middle; padding: 10px">
+                                    <img height="35px" src="img/tipografia_vida.svg" alt="">
+                                </td>
+                                <td width="4%" height="70" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>                        
+                                <td width="4%" height="20" bgcolor="#006fcf" style="padding-top: 40px;"></td>
+                                <td height="20" align="center">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr>
+                                                <td class="text-mobile4" width="10%" height="20" bgcolor="#fff"></td>
+                                                <td width="80%">
+                                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                                        <tbody>
+                                                            <td class="text-mobile4" width="25%" style="color: #001657; font-family: Arial, Helvetica, sans-serif; font-size: 15px; text-align: center; vertical-align: middle;"><a href="https://www.google.org/" style="text-decoration: none; color: #001657">Mis Viajes</a></td>
+                                                            <td class="text-mobile4" width="25%" style="color: #001657; font-family: Arial, Helvetica, sans-serif; font-size: 15px; text-align: center; vertical-align: middle;"><a href="https://www.google.org/" style="text-decoration: none; color: #001657">Mis Bienes</a></td>
+                                                            <td class="text-mobile4" width="25%" style="color: #001657; font-family: Arial, Helvetica, sans-serif; font-size: 15px; text-align: center; vertical-align: middle;"><a href="https://www.google.org/" style="text-decoration: none; color: #001657">Mis Viajes</a></td>
+                                                            <td class="text-mobile4" width="25%" style="color: #001657; font-family: Arial, Helvetica, sans-serif; font-size: 15px; text-align: center; vertical-align: middle;"><a href="https://www.google.org/" style="text-decoration: none; color: #001657">Mis Bienes</a></td>  
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                                <td width="10%" height="20" bgcolor="#fff"></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                <td width="4%" height="20" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>
+                                <td width="4%" height="20" bgcolor="#006fcf"></td>
+                                <td width="92%" bgcolor="#fff"></td>
+                                <td width="4%" height="20" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>                        
+                                <td width="4%" height="1" bgcolor="#006fcf"></td>
+                                <td width="92%" height="1" bgcolor="#e5e4e5"></td>
+                                <td width="4%" height="1" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>
+                                <td width="4%" height="20" bgcolor="#006fcf"></td>
+                                <td width="92%" bgcolor="#fff">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 20px;">American Express ofrece los productos emitidos por las compañías aseguradoras aliadas (disponibles en <a href="www.americanexpress.com.ar/segurosyservicios">www.americanexpress.com.ar/segurosyservicios</a>) en su carácter de agente institorio, inscrito en la Superintendencia de Seguros de la Nación (SSN) bajo el número 92. Teléfono SSN 0800-666-8400, <a href="www.argentina.gob.ar/ssn">www.argentina.gob.ar/ssn</a>.</td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 10px;">Los datos personales son almacenados en una base de datos, cuyo responsable es American Express Argentina S.A., con domicilio legal en Arenales 707, entrepiso, CP C1061AAA, C.A.B.A. Usted podrá, en cualquier momento, solicitar el retiro o bloqueo de su nombre, total o parcial, de nuestra base de datos, y podrá solicitar información acerca del nombre del responsable o usuario de la base de datos que proveyó su información. Ley 25.326, artículo 27, inciso 3: 'El titular podrá, en cualquier momento, solicitar el retiro o bloqueo de su nombre de los bancos de datos a los que se refiere el presente artículo'. Decreto 1558/01, artículo 27, tercer párrafo: 'En toda comunicación con fines de publicidad que se realice por correo, teléfono, correo electrónico, internet u otro medio a distancia a conocer, se deberá indicar, en forma expresa y destacada, la posibilidad del titular del dato de solicitar el retiro o bloqueo, total o parcial, de su nombre de la base de datos. A pedido del interesado, se deberá informar el nombre del responsable o usuario del banco de datos que proveyó la información'.</td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 10px;"><b>INSTRUCCIONES PARA CANCELAR LA SUSCRIPCIÓN:</b></td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 8px;">Este correo electrónico publicitario está destinado a residentes de Argentina y fue enviado a <email>. Si ha sido recibido en una dirección diferente, significa que fue reenviado. Si no desea recibir nuevos mensajes publicitarios en el futuro, por favor responda a este correo electrónico con la palabra “BORRAR” en el asunto (subject), o visite las preferencias de correo electrónico en el sitio web de American Express.</td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 10px;"><b>SERVICIO AL CLIENTE:</b></td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 8px;">Por favor, no responda (reply) a este correo electrónico y dirija todas sus consultas a Servicio al Cliente.</td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 10px;"><b>DECLARACIÓN SOBRE PRIVACIDAD:</b></td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                                <td class="text-mobile" width="92" style="color: #000; font-family: Arial, Helvetica, sans-serif; font-size: 12px; text-align: left; padding-top: 8px;">Para saber cómo obtenemos, aseguramos y utilizamos su información personal cumpliendo con la Ley 25.326, visite la Declaración sobre Privacidad de American Express ingresando en: <a href="www.americanexpress.com.ar/privacidad">www.americanexpress.com.ar/privacidad</a>.</td>
+                                                <td width="4%"  bgcolor="#fff"></td>
+                                            </tr>
+                                            <tr bgcolor="#fff">
+                                                <td width="4%" bgcolor="#fff"></td>
+                                                <td class="text-mobile"width="92" style="color:#000; font-family: Arial,Helvetica, sans-serif;font-size: 10px; text-align:left; padding-top: 10px;"><b>©2019 AMERICAN EXPRESS COMPANY</b></td>
+                                                <td width="4%" bgcolor="#fff"></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <td width="4%" height="20" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>
+                                <td width="4%" height="15" bgcolor="#006fcf"></td>
+                                <td width="92%" height="15"></td>
+                                <td width="4%" height="15" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>
+                                <td width="4%" bgcolor="#006fcf"></td>
+                                <td width="92%">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                          <tr>
+                                            <td width="4%"></td>
+                                            <td class="imgcomun" width="92%"><img src="img/superintendecia.svg" class="imgcomun" alt="American Express"/></td>
+                                            <td width="4%"></td>
+                                          </tr>
+                                        </tbody>
+                                  </table>
+                                </td>
+                                <td width="4%" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr>
+                                <td width="4%" height="15" bgcolor="#006fcf"></td>
+                                <td width="92%" height="15"></td>
+                                <td width="4%" height="15" bgcolor="#006fcf"></td>
+                            </tr>
+                            <tr bgcolor="#006fcf">
+                                <td width="4%" height="25"></td>
+                                <td height="25">
+                                </td>
+                                <td width="4%" height="20" bgcolor="#006fcf"></td>
+                            </tr>
                         </tbody>
                     </table>
                 </td>
